# AgentLedger

./: .gitignore  AGENTS.md  BUILD_LOG.md  README.md  SPEC.md  pyproject.toml
.ledger/: incidents.json  ownership.yaml
agentledger/: __init__.py  cli.py  demo.py  enrich.py  report.py  scan.py  score.py
sample-data/: README.md  decision-units.json  incidents.json  ownership.yaml
tests/: test_cli_help.py  test_enrich.py  test_placeholder.py  test_report.py  test_scan.py  test_score.py  test_self_report.py
