[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentledger"
version = "0.1.0"
description = "Audit AI-agent-written code changes before merge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "openai>=1",
]

[project.scripts]
ledger = "agentledger.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agentledger*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
